# cenote

./: .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  docker-compose.test.yml  mkdocs.yml  pyproject.toml  release-please-config.json
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  osv-scanner-pr.yml  osv-scanner-scheduled.yml  release-please.yml  release.yml  scorecard.yml
demos/: e2e_phase4_5.py  quickstart.py
demos/data/: wikipedia_snippets.json
docs/: 00-first-milestone.md  01-claude-code-prompts.md  benchmarks.md  operations.md
docs/adrs/: 0001-architecture-protocols-and-layers.md  0002-security-tooling.md  0003-testing-strategy.md  0004-documentation-strategy.md  0005-release-engineering.md  0006-dependency-selection.md  0007-framework-influences.md  0008-monorepo-strategy.md  0009-miracl-es-benchmark.md  README.md
docs/benchmarks/: 2026-05-27-m1-1-baselines.md
docs/diagrams/: 01-ecosystem.drawio  02-architecture.drawio  03-runtime-flow.drawio  README.md
docs/proofs/: phase4_5_proof.md  v0.4.0_ship_report.md
docs/site/: adrs.md  architecture.md  benchmarks.md  changelog.md  dod.md  index.md  quickstart.md
docs/site/api/: chunkers.md  embedders.md  eval.md  models.md  pipeline.md  retrievers.md  stores.md
docs/site/extending/: custom-chunker.md  custom-embedder.md
docs/superpowers/plans/: 2026-05-21-m1-0-core-primitives.md
examples/: README.md  custom_embedder.py  pgvector_setup.py
scripts/: build_miracl_subset.py  generate_sbom.sh  run_baseline.py
scripts/verify/: phase0.sh  phase1.sh  phase2.sh  phase3.sh  phase4.sh  phase5.sh
src/cenote/: __init__.py  _filters.py  errors.py  models.py  types.py
src/cenote/bench/: __init__.py  metrics.py  miracl.py  report.py  runner.py
src/cenote/chunkers/: __init__.py  base.py  markdown.py  recursive.py
src/cenote/cli/: __init__.py  bench.py
src/cenote/embedders/: __init__.py  _http.py  base.py  cache.py  cohere.py  mock.py  voyage.py
src/cenote/eval/: __init__.py  bench.py  metrics.py
src/cenote/llm/: __init__.py  anthropic.py  base.py
src/cenote/observability/: __init__.py  base.py  langfuse.py  otel.py  wrappers.py
src/cenote/pipeline/: __init__.py  indexing.py
tests/: _factories.py  _stubs.py  conftest.py  test_errors.py  test_logging_smoke.py  test_models.py  test_types.py
tests/bench/: test_cli.py  test_metrics.py  test_miracl_loader.py  test_report.py  test_runner.py
tests/benchmarks/: test_bm25_perf.py  test_memory_store_perf.py  test_sqlite_cache_perf.py
tests/chunkers/: test_markdown.py  test_recursive.py
tests/demos/: test_quickstart_smoke.py
tests/embedders/: test_cache.py  test_cohere.py  test_http.py  test_mock.py  test_voyage.py
tests/eval/: test_bench.py  test_datasets.py  test_metrics.py
tests/integration/: test_pgvector.py
tests/llm/: test_anthropic.py  test_base.py
tests/observability/: test_base.py  test_langfuse.py  test_otel.py  test_wrappers.py
tests/pipeline/: test_indexing.py
tests/rerankers/: test_base.py  test_cohere.py  test_voyage.py
tests/retrievers/: test_bm25.py  test_hybrid.py  test_vector.py
tests/stores/: test_memory.py  test_pgvector_helpers.py
tests/tokenizers/: test_spanish.py
(+27 files in other folders)
