[project]
name = "cenote-core"
version = "0.3.0"
description = "Production-grade Python framework for building agentic RAG applications. Multilingual-capable with a roadmap toward Spanish/LATAM-first features."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Jovan Díaz", email = "jvaonam@me.com" }]
keywords = ["rag", "llm", "ai", "agents", "retrieval", "embedding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.20",
    "anthropic>=0.39",
    "asyncpg>=0.30",
    "httpx>=0.27",
    "numpy>=2.0",
    "pydantic>=2.8",
    "pystemmer>=2.2",
    "rank-bm25>=0.2.2",
]

[project.urls]
Homepage = "https://github.com/jovandyaz/cenote"
Repository = "https://github.com/jovandyaz/cenote"
Issues = "https://github.com/jovandyaz/cenote/issues"
Changelog = "https://github.com/jovandyaz/cenote/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cenote"]
# Ship the py.typed marker so consumers (mypy/pyright) see our types.
include = [
    "src/cenote/py.typed",
    "src/cenote/**/*.sql",
    "src/cenote/**/*.jsonl",
    "src/cenote/**/NOTICE.md",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]
langfuse = [
    "langfuse>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
    "respx>=0.21",
    "asyncpg-stubs>=0.31.2",
    "mkdocs-material>=9.5",
    "mkdocstrings-python>=1.10",
    "datasets>=2.20",
    "deepeval>=2.0",
    "cyclonedx-py>=1.0.1",
    "hypothesis>=6.155",
    "pytest-benchmark>=5.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "demos", "examples", "scripts"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF", "S"]
ignore = ["S101"]  # assert statements are fine in pytest

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106"]  # hardcoded passwords in tests (S101 already global)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["Stemmer"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rank_bm25"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring external services (Postgres, etc.)",
    "benchmark: performance benchmarks (skipped by default in unit run)",
    "slow: tests with runtime > 1s",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--benchmark-skip",
]

[tool.coverage.run]
source = ["src/cenote"]
branch = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false
